--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BartBastingsSogeti/test.git"
@@ -32,5 +29,6 @@
   "bugs": {
     "url": "https://github.com/BartBastingsSogeti/test/issues"
   },
-  "homepage": "https://github.com/BartBastingsSogeti/test#readme"
+  "homepage": "https://github.com/BartBastingsSogeti/test#readme",
+  "dependencies": {}
 }
